Fixed getLastPerspective method